<resources>
    <string name="app_name">GubbiConnect</string>
    <string name="documents">Documents</string>
    <string name="projects">My Project</string>
    <string name="support">Support</string>
    <string name="handover">Handover</string>
    <string name="feedback">Feedback</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="client">Client</string>
    <string name="issue_description">Issue Description</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="status">Status</string>
    <string name="due_date">Due Date</string>
    <string name="assign_to">Assign To</string>
    <string name="photos">Photos</string>
    <string name="add_from_saved_photos">Add From Saved Photos</string>
    <string name="create">Create</string>
    <string name="contacts">Contacts</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="create_issue">Create Issue</string>
    <string name="save">Save</string>
    <string name="comments">Comments</string>
    <string name="agreement">Terms and conditions</string>
    <string name="clear">Clear</string>
    <string name="name">Name</string>
    <string name="place">Place</string>
    <string name="signature">Signature</string>
    <string name="installation_completion_report">Installation Completion Report</string>
    <string name="remarks">Remarks</string>
    <string name="n_a">N/A</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="str_continue">Continue</string>
    <string name="add_photo">Add Photo</string>
    <string name="type_message">Type message</string>
    <string name="next">Next</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="verify_your_number">Verify your registered mobile number</string>
    <string name="resend_otp"><u>Resend OTP?</u></string>
    <string name="login">Login</string>
    <string name="gubbi_connect">GubbiConnect</string>
    <string name="str_bad">Bad</string>
    <string name="str_good">Good</string>
    <string name="str_wow">Amazing</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Logout</string>
    <string name="no_data">No data available</string>
    <string name="register">Register</string>
    <string name="google_login">Connect with Google</string>
    <string name="facebook_login">Connect with Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="network_settings">Goto settings</string>
    <string name="email_error">Please enter an Email Id</string>
    <string name="invalid_email_error">Please enter a valid Email Id</string>
    <string name="password_reset_link_msg">Password reset link has been sent to email Id.</string>
    <string name="fail_to_send_reset_email">The email you entered, has not been registered.</string>

    <string name="facebook_app_id">163986060648409</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="phone">Phone</string>
    <string name="new_user_message">Please contact MyGubbi support team</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="phone_number_hint">+91 12345 67890</string>
    <string name="verify">Verify</string>
    <string name="send_otp">Send OTP</string>
    <string name="change_photo">Change Photo</string>
    <string name="sign_here_message">Start signing here\nusing finger or stylus</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="files">Files</string>
    <string name="close">Close</string>
</resources>
