<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBar_create_issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ClientConnectToolbarStyle">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_create_issue"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ClientConnectToolbarStyle"
                app:titleTextColor="@color/white" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBar_create_issue"
            android:layout_marginTop="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:paddingBottom="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_issue_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:theme="@style/TextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_issue_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/issue_description"
                        android:inputType="textCapSentences"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_issue_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_input_issue_description"
                    android:layout_marginTop="5dp"
                    android:theme="@style/TextLabel"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_issue_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/category"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_issue_sub_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_input_issue_category"
                    android:layout_marginTop="5dp"
                    android:theme="@style/TextLabel"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_issue_sub_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sub_category"
                        android:inputType="textCapSentences"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_issue_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_input_issue_sub_category"
                    android:layout_marginTop="5dp"
                    android:theme="@style/TextLabel"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_issue_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/status"
                        android:inputType="textCapSentences"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_issue_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_input_issue_status"
                    android:layout_marginTop="5dp"
                    android:theme="@style/TextLabel"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_issue_due_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/due_date"
                        android:inputType="textCapSentences"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_issue_assign_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_input_issue_due_date"
                    android:layout_marginTop="5dp"
                    android:theme="@style/TextLabel"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_issue_assign_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/assign_to"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/text_photos_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_input_issue_assign_to"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:text="@string/photos"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_photos"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_below="@+id/text_photos_header"
                    android:layout_marginTop="5dp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/button_save_issue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recycler_view_photos"
                    android:layout_marginEnd="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/round_button_enabled"
                    android:text="@string/save"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

    <include layout="@layout/image_options_bottom_sheet" />

</android.support.design.widget.CoordinatorLayout>