<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ClientConnectToolbarStyle">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_signature"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ClientConnectToolbarStyle"
            app:titleTextColor="@color/white" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/signature_pad_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons_container">

        <TextView
            android:id="@+id/text_sign_here_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/divider_signature"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:gravity="center"
            android:lineSpacingMultiplier="1.25"
            android:text="@string/sign_here_message"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <com.github.gcacace.signaturepad.views.SignaturePad
            android:id="@+id/signature_pad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/divider_signature"
            android:layout_marginTop="?android:attr/actionBarSize" />

        <View
            android:id="@+id/divider_signature"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/text_terms_and_conditions"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/text_terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/agreement"
            android:textColor="@android:color/darker_gray" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_with_states"
            android:enabled="false"
            android:text="@string/clear"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_with_states"
            android:enabled="false"
            android:text="@string/str_continue"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>